added some new features

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <ul class="link-container">
-                <li class="nav-link red"><a href="#home" class="link">home</a></li>
+                <li class="nav-link"><a href="#home" class="link">home</a></li>
                 <li class="nav-link"> <a href="#about" class="link">about</a></li>
                 <li class="nav-link"><a href="#cars" class="link">cars</a></li>
                 <li class="nav-link"><a href="#service" class="link">services</a></li>
@@ -42,7 +42,10 @@
                 <p class="message"> save up to 30%</p>
             </div>
 
-            <div class="findacar"><div class="progress"></div>find a car</div>
+            <div class="findacar">
+                <div class="progress"></div>
+                find a car
+            </div>
         </div>
 
         <div class="icons">
@@ -56,9 +59,9 @@
         <div class="about__text">
             <h2 class="about__heading">about</h2>
             <h3 class="about__sub-heading">number 1 provider of the cripping driving experiences</h3>
-            <p class="about__body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum et rem, earum quas sapiente harum dignissimos cupiditate, nisi natus nam veniam mollitia nesciunt in itaque! Voluptatum corrupti voluptatem sed earum!
-            </p>
+            <div class="about__body">
+                We extend red carpet service to all our clients. We are so happy to deliver your car to you anywhere. We are her to make your car experience the very best it can be.  company is very creative, that is why we are always trying very hard to keep our fleet of exotics and luxury cars the very best it could be with the latter models, best rate and service to our customers. We always strive to get the best customer service and your satisfaction is always our prime concern.
+            </div>
         </div>
         <div class="about__image">
             <img src="img/campbell-boulanger-3ZUsNJhi_Ik-unsplash.jpg" alt="">
@@ -179,17 +182,27 @@
             <div>What we offer!</div>
         </div>
         <div class="services-div">
-            <div class="service-text">
-                <h2 class="services-heading">1</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non debitis cumque iure numquam, quam quibusdam sunt officia. Est in tempora voluptatibus nobis. Similique inventore, sed pariatur consequatur quasi magni perferendis!</span>
+            <div class="service-text no-list">
+                <h2 class="services-heading">1 </h2>
+                <span>Car rental</span>
             </div>
             <div class="service-text">
-                <h2 class="services-heading">2</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non debitis cumque iure numquam, quam quibusdam sunt officia. Est in tempora voluptatibus nobis. Similique inventore, sed pariatur consequatur quasi magni perferendis!</span>
+                <h2 class="services-heading">2 </h2>
+                <span>Easy Payment</span>
+                <ul>
+                        <li>Credit cards</li>
+                        <li>PayPal</li>
+                        <li>Debit cards</li>
+                    </ul>
             </div>
             <div class="service-text">
-                <h2 class="services-heading">3</h2>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non debitis cumque iure numquam, quam quibusdam sunt officia. Est in tempora voluptatibus nobis. Similique inventore, sed pariatur consequatur quasi magni perferendis!</span>
+                <h2 class="services-heading">3 </h2>
+                <span>Benefits</span>
+                    <ul>
+                        <li>Affordability</li>
+                        <li>comfort</li>
+                        <li>Flexibility</li>
+                    </ul>
             </div>
         </div>
     </div>
